hphp/test/zend/good/ext/sockets/tests/socket_set_option_error_socket_option.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('sockets')) {
    die('SKIP sockets extension not available.');
}
if (PHP_OS == 'Darwin') {
    die('skip Not for OSX');
}
if (posix_geteuid() == 0) {
    die('SKIP Test cannot be run as root.');
}
}
