hphp/test/zend/bad/ext/sockets/tests/socket_set_option_in6_pktinfo.php.skipif
<?php
if (!extension_loaded('sockets')) {
    die('skip sockets extension not available.');
}

require 'ipv6_skipif.inc';

if (!defined('IPPROTO_IPV6')) {
    die('skip IPv6 not available.');
}
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip Not for Windows!');
}
if (!defined('IPV6_PKTINFO')) {
    die('skip IPV6_PKTINFO not available.');
} 